--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user nextcloud;
-worker_processes 1;
+worker_processes 4;
 pid /var/run/nginx.pid;
 daemon off;
 
@@ -29,78 +29,123 @@ http {
   gzip_comp_level 5;
   gzip_min_length 512;
   gzip_buffers 4 8k;
-  gzip_proxied any;
+  gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
   gzip_vary on;
   gzip_disable "msie6";
-  gzip_types
-    text/css
-    text/javascript
-    text/xml
-    text/plain
-    text/x-component
-    application/javascript
-    application/x-javascript
-    application/json
-    application/xml
-    application/rss+xml
-    application/vnd.ms-fontobject
-    font/truetype
-    font/opentype
-    image/svg+xml;
+  gzip_types application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
+
 
   server {
     listen 80;
     index index.php;
     root /opt/nextcloud;
-
-    client_max_body_size 10G;
-    fastcgi_buffers 64 4K;
-
-    rewrite ^/caldav(.*)$ /remote.php/caldav$1 redirect;
-    rewrite ^/carddav(.*)$ /remote.php/carddav$1 redirect;
-    rewrite ^/webdav(.*)$ /remote.php/webdav$1 redirect;
-
-    error_page 403 /core/templates/403.php;
-    error_page 404 /core/templates/404.php;
-
-    add_header X-Frame-Options SAMEORIGIN;
+    
+   # Add headers to serve security related headers
+    # Before enabling Strict-Transport-Security headers please read into this
+    # topic first.
+    # add_header Strict-Transport-Security "max-age=15768000;
+    # includeSubDomains; preload;";
+    #
+    # WARNING: Only add the preload option once you read about
+    # the consequences in https://hstspreload.org/. This option
+    # will add the domain to a hardcoded list that is shipped
+    # in all major browsers and getting removed from this list
+    # could take several months.
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Robots-Tag none;
     add_header X-Download-Options noopen;
     add_header X-Permitted-Cross-Domain-Policies none;
 
+    # Path to the root of your installation
+    root /var/www/nextcloud/;
+
     location = /robots.txt {
-      allow all;
-      log_not_found off;
-      access_log off;
+        allow all;
+        log_not_found off;
+        access_log off;
     }
 
-    location ~ ^/(data|config|\.ht|db_structure\.xml|README) {
-      deny all;
+    # The following 2 rules are only needed for the user_webfinger app.
+    # Uncomment it if you're planning to use this app.
+    #rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
+    #rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json
+    # last;
+
+    location = /.well-known/carddav {
+      return 301 $scheme://$host/remote.php/dav;
     }
+    location = /.well-known/caldav {
+      return 301 $scheme://$host/remote.php/dav;
+    }
+
+    # set max upload size
+    client_max_body_size 10G;
+    fastcgi_buffers 64 4K;
+
+    # Uncomment if your server is build with the ngx_pagespeed module
+    # This module is currently not supported.
+    #pagespeed off;
 
     location / {
-      rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
-      rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json last;
-      rewrite ^/.well-known/carddav /remote.php/carddav/ redirect;
-      rewrite ^/.well-known/caldav /remote.php/caldav/ redirect;
-      rewrite ^(/core/doc/[^\/]+/)$ $1/index.html;
-      try_files $uri $uri/ index.php;
+        rewrite ^ /index.php$uri;
     }
 
-    location ~ ^(.+?\.php)(/.*)?$ {
-      try_files $1 = 404;
-      include fastcgi_params;
-      fastcgi_param modHeadersAvailable true;
-      fastcgi_param SCRIPT_FILENAME $document_root$1;
-      fastcgi_param PATH_INFO $2;
-      fastcgi_pass unix:/var/run/php-fpm.sock;
+    location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
+        deny all;
+    }
+    location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
+        deny all;
     }
 
-    location ~* ^.+\.(jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ {
-      expires 30d;
-      access_log off;
+    location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTPS on;
+        #Avoid sending the security headers twice
+        fastcgi_param modHeadersAvailable true;
+        fastcgi_param front_controller_active true;
+        fastcgi_pass unix:/var/run/php-fpm.sock;
+        fastcgi_intercept_errors on;
+        fastcgi_request_buffering off;
+    }
+
+    location ~ ^/(?:updater|ocs-provider)(?:$|/) {
+        try_files $uri/ =404;
+        index index.php;
+    }
+
+    # Adding the cache control header for js and css files
+    # Make sure it is BELOW the PHP block
+    location ~ \.(?:css|js|woff|svg|gif)$ {
+        try_files $uri /index.php$uri$is_args$args;
+        add_header Cache-Control "public, max-age=15778463";
+        # Add headers to serve security related headers (It is intended to
+        # have those duplicated to the ones above)
+        # Before enabling Strict-Transport-Security headers please read into
+        # this topic first.
+        # add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
+        #
+        # WARNING: Only add the preload option once you read about
+        # the consequences in https://hstspreload.org/. This option
+        # will add the domain to a hardcoded list that is shipped
+        # in all major browsers and getting removed from this list
+        # could take several months.
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Robots-Tag none;
+        add_header X-Download-Options noopen;
+        add_header X-Permitted-Cross-Domain-Policies none;
+        # Optional: Don't log access to assets
+        access_log off;
+    }
+
+    location ~ \.(?:png|html|ttf|ico|jpg|jpeg)$ {
+        try_files $uri /index.php$uri$is_args$args;
+        # Optional: Don't log access to other assets
+        access_log off;
     }
   }
 }
