--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -27,7 +27,8 @@ http {
 
   server {
     listen 80;
-
+    
+    add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
     add_header Referrer-Policy no-referrer;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-Download-Options "noopen" always;
@@ -49,11 +50,17 @@ http {
       log_not_found off;
       access_log off;
     }
+    
+    location = / {
+        if ( $http_user_agent ~ ^DavClnt ) {
+            return 302 https://$host/remote.php/webdav/$is_args$args;
+        }
+    }
 
     location ^~ /.well-known {
-      location = /.well-known/carddav     { return 301 /remote.php/dav/; }
-      location = /.well-known/caldav      { return 301 /remote.php/dav/; }
-      location ^~ /.well-known            { return 301 /index.php$uri; }
+      location = /.well-known/carddav     { return 301 https://$host/remote.php/dav/; }
+      location = /.well-known/caldav      { return 301 https://$host/remote.php/dav/; }
+      location ^~ /.well-known            { return 301 https://$host/index.php$uri; }
 
       try_files $uri $uri/ =404;
     }
@@ -88,6 +95,12 @@ http {
       deny all;
     }
 
+    location ~ /userapps/(.*)$ {
+      alias /apps2/$1;
+    }
+
+
+
     location ~ ^\/(?:index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.+)\.php(?:$|\/) {
       fastcgi_split_path_info ^(.+?\.php)(\/.*|)$;
       set $path_info $fastcgi_path_info;
@@ -114,13 +127,14 @@ http {
     location ~ \.(?:css|js|woff2?|svg|gif|map)$ {
       try_files $uri /index.php$request_uri;
       add_header Cache-Control "public, max-age=15778463";
+      add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
       add_header Referrer-Policy "no-referrer" always;
-      add_header X-Content-Type-Options "nosniff" always;
       add_header X-Download-Options "noopen" always;
       add_header X-Frame-Options "SAMEORIGIN" always;
       add_header X-Permitted-Cross-Domain-Policies "none" always;
       add_header X-Robots-Tag "none" always;
       add_header X-XSS-Protection "1; mode=block" always;
+      add_header X-Content-Type-Options "nosniff" always;
 
       access_log off;
     }
